# lung-cancer-detection

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: 00_duvidas_e_respostas.ipynb  01_download_luna16.ipynb  02_explore_csv_data.ipynb  03_candidates_vs_annotations.ipynb  03_unify_data_sources.ipynb  04_ct_scan_to_dataset.ipynb  05_build_cache.ipynb  05_model_architecture.ipynb  06_training.ipynb  07_results_analysis.ipynb  08_model_evaluation.ipynb  09_gradio_deploy.ipynb  10_visual_report.ipynb  11_resultado_final.ipynb  TESTE.ipynb
scratch/: build_notebook_11.py  build_visual_report.py  check_cache_corruption.py  extract_full_metrics.py  find_visual_examples.py  generate_val_data.py  inspect_training.py  test_cache_speed.py  verify_fix.py
scripts/: run_training.py  run_training_phase2.py
src/: __init__.py  inference.py  luna_data.py  model.py  training.py
