[project]
name = "lung-cancer-detection"
version = "0.1.0"
description = "Detecção de nódulos pulmonares usando Deep Learning com o dataset LUNA16"
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "gradio>=6.5.1",
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "manim>=0.19.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "simpleitk>=2.5.3",
    "torch>=2.0",
    "torchvision>=0.17.2",
    "tqdm>=4.67.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
